--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/index.js"
+    "start": "node ./src/index.js",
+    "start2": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/index.js"
   },
   "keywords": [],
   "author": "",
