--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
-    "start2": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/index.js"
+    "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -21,6 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.8",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.7.2"
   }
 }
