modif: nodemailer and twilio

--- a/.env
+++ b/.env
@@ -3,3 +3,14 @@
 
 MONGO_URL = mongodb+srv://roman_miguel:Mg39761371@coderhouse.meh5d.mongodb.net/proyecto
 SECRET = secret(1234)
+
+SMTP = smtp.ethereal.email
+EMAIL = saige.rolfson3@ethereal.email
+PASS = Qcp8a1Tjg6JrnYfPhc
+USER_GMAIL = "mgroman96@gmail.com"
+PASS_GMAIL = lfpdeebjjxwdjzbi
+
+
+TOKEN = a6f1304ca7ce95a333f3faf1b1892fd4
+SID = ACe33237d597d725bd7e304ea1dde8d937
+SMS = +19783545484
