--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.8",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "twilio": "^3.78.0",
     "winston": "^3.7.2"
   }
 }
