--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha ./testing/test.productos.js",
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js mongo",
     "deb": "nodemon ./src/index.js file",
